Add Customer management functionality with form layout and controller methods

--- a/src/main/resources/view/customer_form.fxml
+++ b/src/main/resources/view/customer_form.fxml
@@ -9,15 +9,16 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="575.0" prefWidth="921.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Customer.CustomerInfoController">
+<AnchorPane prefHeight="604.0" prefWidth="926.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Customer.CustomerInfoController">
     <children>
-        <Label layoutX="382.0" layoutY="28.0" text="Customer Form">
+        <Label alignment="CENTER" layoutX="363.0" layoutY="35.0" prefHeight="50.0" prefWidth="250.0" text="Customer Form">
             <font>
-                <Font size="23.0" />
+                <Font name="System Bold" size="33.0" />
             </font>
         </Label>
-        <TableView fx:id="tblCustomer" layoutX="14.0" layoutY="90.0" prefHeight="314.0" prefWidth="898.0">
+        <TableView fx:id="tblCustomer" layoutX="14.0" layoutY="114.0" prefHeight="314.0" prefWidth="898.0">
             <columns>
                 <TableColumn fx:id="col_cust_id" prefWidth="61.600006103515625" text="Cust ID" />
                 <TableColumn fx:id="col_title" prefWidth="79.19998168945312" text="Title" />
@@ -30,20 +31,27 @@
                 <TableColumn fx:id="col_postal_code" prefWidth="96.7999267578125" text="Postal Code" />
             </columns>
         </TableView>
-        <TextField fx:id="txtCustId" layoutX="20.0" layoutY="426.0" prefHeight="26.0" prefWidth="84.0" promptText="Customer ID" />
-        <TextField fx:id="txtTitle" layoutX="120.0" layoutY="426.0" prefHeight="26.0" prefWidth="114.0" promptText="Title" />
-        <TextField fx:id="txtName" layoutX="249.0" layoutY="426.0" prefHeight="26.0" prefWidth="294.0" promptText="Name" />
-        <TextField fx:id="txtSalary" layoutX="761.0" layoutY="426.0" prefHeight="26.0" prefWidth="130.0" promptText="Salary" />
-        <DatePicker fx:id="txtDOB" layoutX="565.0" layoutY="426.0" prefHeight="26.0" prefWidth="183.0" />
-        <TextField fx:id="txtAddress" layoutX="20.0" layoutY="469.0" prefHeight="26.0" prefWidth="433.0" promptText="Address" />
-        <TextField fx:id="txtCity" layoutX="470.0" layoutY="469.0" prefHeight="26.0" prefWidth="123.0" promptText="City" />
-        <TextField fx:id="txtPostalCode" layoutX="776.0" layoutY="469.0" prefHeight="26.0" prefWidth="114.0" promptText="Postal Code" />
-        <ChoiceBox fx:id="txtProvince" layoutX="614.0" layoutY="469.0" prefHeight="26.0" prefWidth="146.0" />
-        <Button layoutX="20.0" layoutY="515.0" mnemonicParsing="false" onAction="#btnAdd" prefHeight="26.0" prefWidth="91.0" text="ADD" />
-        <Button layoutX="131.0" layoutY="515.0" mnemonicParsing="false" onAction="#btnUpdate" prefHeight="26.0" prefWidth="91.0" text="UPDATE" />
-        <Button layoutX="249.0" layoutY="515.0" mnemonicParsing="false" onAction="#btnDelete" prefHeight="26.0" prefWidth="91.0" text="DELETE" />
-        <Button layoutX="457.0" layoutY="515.0" mnemonicParsing="false" onAction="#btnItemManage" prefHeight="26.0" prefWidth="114.0" text="Item Management" />
-        <Button layoutX="587.0" layoutY="515.0" mnemonicParsing="false" onAction="#btnSupplierManage" prefHeight="26.0" prefWidth="138.0" text="Supplier Management" />
-        <Button layoutX="743.0" layoutY="515.0" mnemonicParsing="false" onAction="#btnEmployeeManage" prefHeight="26.0" prefWidth="146.0" text="Employee Management" />
+        <TextField fx:id="txtCustId" layoutX="20.0" layoutY="446.0" prefHeight="26.0" prefWidth="84.0" promptText="Customer ID" />
+        <TextField fx:id="txtTitle" layoutX="126.0" layoutY="446.0" prefHeight="26.0" prefWidth="114.0" promptText="Title" />
+        <TextField fx:id="txtName" layoutX="261.0" layoutY="446.0" prefHeight="26.0" prefWidth="294.0" promptText="Name" />
+        <TextField fx:id="txtSalary" layoutX="776.0" layoutY="446.0" prefHeight="26.0" prefWidth="130.0" promptText="Salary" />
+        <DatePicker fx:id="txtDOB" layoutX="574.0" layoutY="446.0" prefHeight="26.0" prefWidth="183.0" />
+        <TextField fx:id="txtAddress" layoutX="20.0" layoutY="492.0" prefHeight="26.0" prefWidth="433.0" promptText="Address" />
+        <TextField fx:id="txtCity" layoutX="482.0" layoutY="492.0" prefHeight="26.0" prefWidth="123.0" promptText="City" />
+        <TextField fx:id="txtPostalCode" layoutX="791.0" layoutY="492.0" prefHeight="26.0" prefWidth="114.0" promptText="Postal Code" />
+        <ChoiceBox fx:id="txtProvince" layoutX="627.0" layoutY="492.0" prefHeight="26.0" prefWidth="146.0" />
+        <Button layoutX="16.0" layoutY="552.0" mnemonicParsing="false" onAction="#btnAdd" prefHeight="26.0" prefWidth="91.0" text="ADD" />
+        <Button layoutX="131.0" layoutY="553.0" mnemonicParsing="false" onAction="#btnUpdate" prefHeight="26.0" prefWidth="91.0" text="UPDATE" />
+        <Button layoutX="249.0" layoutY="553.0" mnemonicParsing="false" onAction="#btnDelete" prefHeight="26.0" prefWidth="91.0" text="DELETE" />
+        <Button layoutX="474.0" layoutY="552.0" mnemonicParsing="false" onAction="#btnItemManage" prefHeight="26.0" prefWidth="114.0" text="Item Management" />
+        <Button layoutX="605.0" layoutY="552.0" mnemonicParsing="false" onAction="#btnSupplierManage" prefHeight="26.0" prefWidth="138.0" text="Supplier Management" />
+        <Button layoutX="760.0" layoutY="552.0" mnemonicParsing="false" onAction="#btnEmployeeManage" prefHeight="26.0" prefWidth="146.0" text="Employee Management" />
+      <Text layoutX="767.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Customer Information">
+         <font>
+            <Font name="System Italic" size="15.0" />
+         </font>
+      </Text>
+      <Text fx:id="txtTime" layoutX="830.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="11:42:25 AM" />
+      <Text fx:id="txtDate" layoutX="795.0" layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="13st November 2025" />
     </children>
 </AnchorPane>
