--- a/src/main/resources/view/management_form.fxml
+++ b/src/main/resources/view/management_form.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DialogPane?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="CONTROLLER_NAME"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="423.0" prefWidth="581.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ManagementInfoController">
+    <children>
+        <DialogPane layoutX="104.0" layoutY="109.0" />
+        <Button layoutX="174.0" layoutY="59.0" mnemonicParsing="false" onAction="#btnCustomerManagement" prefHeight="42.0" prefWidth="220.0" text="Customer Management" />
+        <Button layoutX="174.0" layoutY="120.0" mnemonicParsing="false" onAction="#btnItemManagement" prefHeight="42.0" prefWidth="220.0" text="Item Management" />
+        <Button layoutX="174.0" layoutY="177.0" mnemonicParsing="false" onAction="#btnSupplierManagement" prefHeight="42.0" prefWidth="220.0" text="Supplier Management" />
+        <Button layoutX="174.0" layoutY="238.0" mnemonicParsing="false" onAction="#btnEmployeeManagement" prefHeight="42.0" prefWidth="220.0" text="Employee Management" />
+        <Button layoutX="174.0" layoutY="300.0" mnemonicParsing="false" onAction="#btnLogOut" prefHeight="42.0" prefWidth="220.0" text="Log out" />
+    </children>
 </AnchorPane>
