--- a/src/main/resources/view/login_from.fxml
+++ b/src/main/resources/view/login_from.fxml
@@ -1,31 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginInfoController" stylesheets="@/Style/Login.css">
-
+<AnchorPane prefHeight="550.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom right, #2c3e50, #4ca1af);" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginInfoController" stylesheets="@/Style/Login.css">
     <children>
 
-        <VBox fx:id="card" layoutX="120.0" layoutY="40.0" spacing="12.0" alignment="CENTER">
+        <VBox fx:id="card" alignment="CENTER" layoutX="140.0" layoutY="50.0" prefWidth="320.0" spacing="15.0" style="-fx-background-color: rgba(255, 255, 255, 0.9); -fx-background-radius: 15; -fx-padding: 30;">
+            <effect>
+                <DropShadow color="#00000033" offsetX="4.0" offsetY="4.0" radius="10.0" />
+            </effect>
+            <children>
 
-            <ImageView fx:id="imgAvatar" fitWidth="96.0" fitHeight="96.0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fx:id="imgAvatar" fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true" />
 
-            <Label fx:id="lblTitle" text="Welcome" />
+                <Label fx:id="lblTitle" text="Welcome Back!" style="-fx-font-size: 24px; -fx-font-weight: bold; -fx-text-fill: #2c3e50;">
+                    <VBox.margin>
+                        <Insets bottom="10.0" />
+                    </VBox.margin>
+                </Label>
 
-            <Label styleClass="field-label" text="Username" />
-            <TextField fx:id="txtUserName" promptText="Enter username" />
-            <Label styleClass="field-label" text="Password" />
-            <TextField fx:id="txtPassword" promptText="Enter password" />
-            <Button fx:id="btnLogin" mnemonicParsing="false" text="Login" onAction="#btnLogin" />
+                <Label styleClass="field-label" text="Username" />
+                <TextField fx:id="txtUserName" prefHeight="40.0" promptText="Enter username" styleClass="login-field" />
 
-            <Label fx:id="lblNote" text="Enter to submit" />
+                <Label styleClass="field-label" text="Password" />
+                <PasswordField fx:id="txtPassword" prefHeight="40.0" promptText="Enter password" styleClass="login-field" />
+
+                <Button fx:id="btnLogin" mnemonicParsing="false" onAction="#btnLogin" prefHeight="45.0" prefWidth="260.0" text="Login" styleClass="login-button">
+                    <VBox.margin>
+                        <Insets top="15.0" />
+                    </VBox.margin>
+                </Button>
+
+                <Label fx:id="lblNote" text="Enter to submit" style="-fx-font-size: 11px; -fx-text-fill: #7f8c8d;" />
+
+            </children>
         </VBox>
-
     </children>
 </AnchorPane>
