--- a/src/main/resources/view/management_form.fxml
+++ b/src/main/resources/view/management_form.fxml
@@ -1,16 +1,92 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DialogPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="423.0" prefWidth="581.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ManagementInfoController">
+<AnchorPane prefHeight="500.0" prefWidth="584.0"
+            style="-fx-background-color: linear-gradient(to bottom right, #2c3e50, #4ca1af);"
+            xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="Controller.ManagementInfoController">
     <children>
-        <DialogPane layoutX="104.0" layoutY="109.0" />
-        <Button layoutX="174.0" layoutY="59.0" mnemonicParsing="false" onAction="#btnCustomerManagement" prefHeight="42.0" prefWidth="220.0" text="Customer Management" />
-        <Button layoutX="174.0" layoutY="120.0" mnemonicParsing="false" onAction="#btnItemManagement" prefHeight="42.0" prefWidth="220.0" text="Item Management" />
-        <Button layoutX="174.0" layoutY="177.0" mnemonicParsing="false" onAction="#btnSupplierManagement" prefHeight="42.0" prefWidth="220.0" text="Supplier Management" />
-        <Button layoutX="174.0" layoutY="238.0" mnemonicParsing="false" onAction="#btnEmployeeManagement" prefHeight="42.0" prefWidth="220.0" text="Employee Management" />
-        <Button layoutX="174.0" layoutY="300.0" mnemonicParsing="false" onAction="#btnLogOut" prefHeight="42.0" prefWidth="220.0" text="Log out" />
+        <VBox alignment="CENTER" layoutX="150.0" layoutY="50.0" prefHeight="400.0" prefWidth="300.0" spacing="20.0"
+              AnchorPane.bottomAnchor="50.799999999999955" AnchorPane.leftAnchor="150.0"
+              AnchorPane.rightAnchor="150.79999999999995" AnchorPane.topAnchor="50.0">
+            <children>
+                <Label text="Management Dashboard" textFill="WHITE">
+                    <font>
+                        <Font name="System Bold" size="24.0"/>
+                    </font>
+                    <effect>
+                        <DropShadow color="#00000040"/>
+                    </effect>
+                    <VBox.margin>
+                        <Insets bottom="20.0"/>
+                    </VBox.margin>
+                </Label>
+
+                <Button mnemonicParsing="false" onAction="#btnCustomerManagement" prefHeight="45.0" prefWidth="260.0"
+                        style="-fx-background-color: #ecf0f1; -fx-text-fill: #2c3e50; -fx-background-radius: 25; -fx-font-weight: bold; -fx-cursor: hand;"
+                        text="Customer Management">
+                    <font>
+                        <Font size="14.0"/>
+                    </font>
+                    <effect>
+                        <DropShadow color="#00000033" offsetX="2.0" offsetY="2.0"/>
+                    </effect>
+                </Button>
+
+                <Button mnemonicParsing="false" onAction="#btnItemManagement" prefHeight="45.0" prefWidth="260.0"
+                        style="-fx-background-color: #ecf0f1; -fx-text-fill: #2c3e50; -fx-background-radius: 25; -fx-font-weight: bold; -fx-cursor: hand;"
+                        text="Item Management">
+                    <font>
+                        <Font size="14.0"/>
+                    </font>
+                    <effect>
+                        <DropShadow color="#00000033" offsetX="2.0" offsetY="2.0"/>
+                    </effect>
+                </Button>
+
+                <Button mnemonicParsing="false" onAction="#btnSupplierManagement" prefHeight="45.0" prefWidth="260.0"
+                        style="-fx-background-color: #ecf0f1; -fx-text-fill: #2c3e50; -fx-background-radius: 25; -fx-font-weight: bold; -fx-cursor: hand;"
+                        text="Supplier Management">
+                    <font>
+                        <Font size="14.0"/>
+                    </font>
+                    <effect>
+                        <DropShadow color="#00000033" offsetX="2.0" offsetY="2.0"/>
+                    </effect>
+                </Button>
+
+                <Button mnemonicParsing="false" onAction="#btnEmployeeManagement" prefHeight="45.0" prefWidth="260.0"
+                        style="-fx-background-color: #ecf0f1; -fx-text-fill: #2c3e50; -fx-background-radius: 25; -fx-font-weight: bold; -fx-cursor: hand;"
+                        text="Employee Management">
+                    <font>
+                        <Font size="14.0"/>
+                    </font>
+                    <effect>
+                        <DropShadow color="#00000033" offsetX="2.0" offsetY="2.0"/>
+                    </effect>
+                </Button>
+
+                <Button mnemonicParsing="false" onAction="#btnLogOut" prefHeight="45.0" prefWidth="260.0"
+                        style="-fx-background-color: #e74c3c; -fx-text-fill: white; -fx-background-radius: 25; -fx-font-weight: bold; -fx-cursor: hand;"
+                        text="Log Out">
+                    <font>
+                        <Font size="14.0"/>
+                    </font>
+                    <VBox.margin>
+                        <Insets top="15.0"/>
+                    </VBox.margin>
+                    <effect>
+                        <DropShadow color="#00000033" offsetX="2.0" offsetY="2.0"/>
+                    </effect>
+                </Button>
+            </children>
+        </VBox>
     </children>
 </AnchorPane>
